@@ -1,6 +1,9 @@
 v3.6.0-rc.2 (XXXX-XX-XX)
 ------------------------
 
+* Fixed internal issue #4748: Editing a single edgeDefinition using the graph
+  API failed if it was not shared between all available graphs.
+
 * Fixed undefined behavior on node delete.
 
 * Fixed agency invalid operation.
